# RaspberryPi-WebRTC

./: .gitignore  CMakeLists.txt
scripts/: egress-shaper.service  egress-shaper.sh
src/: args.h  main.cpp  parser.cpp
src/capturer/: CMakeLists.txt  libcamera_capturer.cpp  libcamera_capturer.h  osd_overlay.cpp  osd_overlay.h  pa_capturer.cpp  pa_capturer.h  v4l2_capturer.cpp  v4l2_capturer.h  yuyv_clock.cpp  yuyv_clock.h
src/codecs/v4l2/: v4l2_h264_encoder.cpp  v4l2_h264_encoder.h
src/common/: CMakeLists.txt  utils.cpp  utils.h  v4l2_utils.cpp  v4l2_utils.h  worker.cpp  worker.h
src/ipc/: unix_socket_server.cpp
src/recorder/: jetson_recorder.cpp  jetson_recorder.h  openh264_recorder.cpp  openh264_recorder.h  raw_h264_recorder.cpp  recorder.h  recorder_manager.cpp  recorder_manager.h  v4l2_h264_recorder.cpp  v4l2_h264_recorder.h  video_recorder.cpp  video_recorder.h
src/rtc/: audio_device_bridge.h  conductor.cpp  conductor.h  rtc_channel.cpp  rtc_channel.h
src/signaling/: mqtt_service.cpp  mqtt_service.h  websocket_service.cpp  websocket_service.h
